--- a/.gitignore
+++ b/.gitignore
@@ -194,3 +194,4 @@ card-images/tokens/tuskarr-meal.png
 card-images/tokens/twilight-dragonkin.png
 card-images/tokens/wyrmrest-vanquisher.png
 card-images/1-001.webp
+card-images/tokens/t-0020.png
